[FIX] #56962 Fixed order columns align

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -160,6 +160,10 @@ input[type="text"] {
 {
 	width: 300px !important;
 }
+.inputw450
+{
+	width: 450px !important;
+}
 .inputw500
 {
 	width: 500px !important;
